# .agents

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/art-sprite-director/: AGENT.md
agents/bjj-combat-engineer/: AGENT.md
agents/game-studio-director/: AGENT.md
agents/lore-guardian/: AGENT.md
agents/product-architect/: AGENT.md
agents/qa-release-guardian/: AGENT.md
agents/repository-guardian/: AGENT.md
agents/security-privacy-guardian/: AGENT.md
config/: agents.json  tools.json  workflows.json
docs/: ARCHITECTURE.md  INTEGRATIONS.md
integrations/hermes-forja-adaptive/: README.md  VALIDATION_REPORT.md  manifest.json
integrations/hermes-forja-adaptive/releases/: Hermes_FORJA_Adaptive_NVIDIA_v2.1.zip.sha256
src/cria_agents/: __init__.py  cli.py  config.py  models.py  orchestrator.py  tools.py
tests/: test_config.py  test_orchestrator.py
